Switch back to Java 11 for larger compatibility