@@ -4,13 +4,19 @@ import org.apache.hadoop.fs.Path;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 /**
  * Represents a list of chained partitions.
- * @param partitions all partitions.
  */
-public record ParquetPartitions(List<ParquetPartition> partitions) {
+public final class ParquetPartitions {
+    private final List<ParquetPartition> partitions;
+
+    private ParquetPartitions(List<ParquetPartition> partitions) {
+        this.partitions = partitions;
+    }
+
     /**
      * Parses the given {@link Path} to extract partitions from folders formatted as /partition=value/.
      *
@@ -22,23 +28,30 @@ public record ParquetPartitions(List<ParquetPartition> partitions) {
                 Arrays.stream(path.toUri().getPath().split("/"))
                         .filter(part -> part.contains("="))
                         .map(ParquetPartition::fromString)
-                        .toList();
+                        .collect(Collectors.toList());
 
         return new ParquetPartitions(partitions);
     }
 
     /**
+     * @return All partitions.
+     */
+    public List<ParquetPartition> getPartitions() {
+        return partitions;
+    }
+
+    /**
      * @return All partition keys.
      */
-    public List<String> keys() {
-        return partitions.stream().map(ParquetPartition::key).toList();
+    public List<String> getKeys() {
+        return partitions.stream().map(ParquetPartition::getKey).collect(Collectors.toList());
     }
 
     /**
      * @return All partition values.
      */
-    public List<String> values() {
-        return partitions.stream().map(ParquetPartition::value).toList();
+    public List<String> getValues() {
+        return partitions.stream().map(ParquetPartition::getValue).collect(Collectors.toList());
     }
 
     @Override
@@ -46,5 +59,19 @@ public record ParquetPartitions(List<ParquetPartition> partitions) {
         return partitions.stream()
                 .map(ParquetPartition::toString)
                 .collect(Collectors.joining("/", "[", "]"));
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (o == null || getClass() != o.getClass()) {
+            return false;
+        }
+        ParquetPartitions that = (ParquetPartitions) o;
+        return Objects.equals(partitions, that.partitions);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hashCode(partitions);
     }
 }
